unpackaged/main/default/objects/Account/fields/Netsuite_Internal_ID__c.field-meta.xml
<CustomField>
    <fullName>Netsuite_Internal_ID__c</fullName>
    <description>This is the Internal ID passed from Netsuite when an account is added</description>
    <label>Netsuite Internal ID</label>
    <length>12</length>
    <type>Text</type>
</CustomField>