unpackaged/main/default/objects/Account/fields/Netsuite_Sync_Date__c.field-meta.xml
<CustomField>
    <fullName>Netsuite_Sync_Date__c</fullName>
    <description>The date that the record was synced with Netsuite</description>
    <label>Netsuite Sync Date</label>
    <type>DateTime</type>
</CustomField>