unpackaged/main/default/objects/Account/fields/Netsuite_Sync_Error__c.field-meta.xml
<CustomField>
    <fullName>Netsuite_Sync_Error__c</fullName>
    <label>Netsuite Sync Error</label>
    <length>255</length>
    <type>Text</type>
</CustomField>