unpackaged/main/default/objects/Account/fields/Next_Renewal_Date_lookup__c.field-meta.xml
<CustomField>
    <fullName>Next_Renewal_Date_lookup__c</fullName>
    <formula>TEXT(Contract_lookup__r.End_Date_with_Promotion__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Next Renewal Date (lookup)</label>
    <type>Text</type>
</CustomField>