unpackaged/main/default/objects/Account/fields/nfusion_CompanyID__c.field-meta.xml
<CustomField>
    <fullName>nfusion_CompanyID__c</fullName>
    <label>Infusionsoft CompanyID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>