unpackaged/main/default/objects/Account/fields/nfusion_owner__c.field-meta.xml
<CustomField>
    <fullName>nfusion_owner__c</fullName>
    <label>Infusionsoft owner</label>
    <length>50</length>
    <type>Text</type>
</CustomField>