unpackaged/main/default/objects/Account/fields/nfusion_price__c.field-meta.xml
<CustomField>
    <fullName>nfusion_price__c</fullName>
    <label>Infusionsoft price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>