unpackaged/main/default/objects/Account/fields/nfusion_product__c.field-meta.xml
<CustomField>
    <fullName>nfusion_product__c</fullName>
    <label>Infusionsoft product</label>
    <length>100</length>
    <type>Text</type>
</CustomField>