unpackaged/main/default/objects/Account/fields/nfusion_RenewalDate__c.field-meta.xml
<CustomField>
    <fullName>nfusion_RenewalDate__c</fullName>
    <label>Infusionsoft RenewalDate</label>
    <type>Date</type>
</CustomField>