unpackaged/main/default/objects/Account/fields/nfusion_seats__c.field-meta.xml
<CustomField>
    <fullName>nfusion_seats__c</fullName>
    <label>Infusionsoft seats</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>