unpackaged/main/default/objects/Account/fields/Non_Renewable__c.field-meta.xml
<CustomField>
    <fullName>Non_Renewable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to flag Accounts that should not have Renewable Opportunities created off Contract and added as criteria to Process Builder.</description>
    <label>Non-Renewable</label>
    <type>Checkbox</type>
</CustomField>