unpackaged/main/default/objects/Account/fields/of_Audit_Employees__c.field-meta.xml
<CustomField>
    <fullName>of_Audit_Employees__c</fullName>
    <label># of Audit Employees</label>
    <type>TextArea</type>
</CustomField>