unpackaged/main/default/objects/Account/fields/Opportunities_in_Progress__c.field-meta.xml
<CustomField>
    <fullName>Opportunities_in_Progress__c</fullName>
    <label>#Opportunities in Progress</label>
    <summarizedField>Opportunity.Opportunity__c</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>notEqual</operation>
        <value>Closed Won</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>notEqual</operation>
        <value>Closed Lost</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>