unpackaged/main/default/objects/Account/fields/Org_Chart_Link__c.field-meta.xml
<CustomField>
    <fullName>Org_Chart_Link__c</fullName>
    <label>Org Chart Link</label>
    <type>Url</type>
</CustomField>