unpackaged/main/default/objects/Account/fields/OriginationDate__c.field-meta.xml
<CustomField>
    <fullName>OriginationDate__c</fullName>
    <inlineHelpText>This is the date that the account originated with us.</inlineHelpText>
    <label>Origination Date</label>
    <type>Date</type>
</CustomField>