unpackaged/main/default/objects/Account/fields/Owner_18_Character_ID__c.field-meta.xml
<CustomField>
    <fullName>Owner_18_Character_ID__c</fullName>
    <formula>CASESAFEID(OwnerId)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner 18 Character ID</label>
    <type>Text</type>
</CustomField>