unpackaged/main/default/objects/Account/fields/PL_Status_Historical__c.field-meta.xml
<CustomField>
    <fullName>PL_Status_Historical__c</fullName>
    <label>PL Status (Historical)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Prospect</fullName>
            </value>
            <value>
                <fullName>Not a fit</fullName>
            </value>
            <value>
                <fullName>Cold Prospect/Hubspot Prospect</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>