unpackaged/main/default/objects/Account/fields/Quote_Primary_Contact_Id__c.field-meta.xml
<CustomField>
    <fullName>Quote_Primary_Contact_Id__c</fullName>
    <formula>QuotePrimaryContactFilter__r.Id</formula>
    <label>Quote Primary Contact Id</label>
    <type>Text</type>
</CustomField>