unpackaged/main/default/objects/Account/fields/Quote_Primary_ID_TEMP__c.field-meta.xml
<CustomField>
    <fullName>Quote_Primary_ID_TEMP__c</fullName>
    <formula>QuotePrimaryContactFilter__r.Id</formula>
    <label>Quote Primary ID TEMP</label>
    <type>Text</type>
</CustomField>