unpackaged/main/default/objects/Account/fields/QuotePrimaryContactFilter__c.field-meta.xml
<CustomField>
    <fullName>QuotePrimaryContactFilter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote Primary Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (Quote Primary Contact Filter)</relationshipLabel>
    <relationshipName>Accounts3</relationshipName>
    <type>Lookup</type>
</CustomField>