unpackaged/main/default/objects/Account/fields/Renewals__c.field-meta.xml
<CustomField>
    <fullName>Renewals__c</fullName>
    <description>Roll-Up Count of Opportunity Renewals associated with this Account.</description>
    <inlineHelpText>Count of Opportunity Renewals associated with this Account.</inlineHelpText>
    <label>#Renewals</label>
    <summaryFilterItems>
        <field>Opportunity.SBQQ__Renewal__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>Closed Won</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>