unpackaged/main/default/objects/Account/fields/Reseller_Contracted__c.field-meta.xml
<CustomField>
    <fullName>Reseller_Contracted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Once a Reseller has a selling contract in place, this checkbox should be checked.  If not checked, Opportunities cannot be created off a reseller Account</description>
    <inlineHelpText>Once a Reseller has a selling contract in place, this checkbox should be checked.  If not checked, Opportunities cannot be created off this Account</inlineHelpText>
    <label>Reseller Contracted</label>
    <type>Checkbox</type>
</CustomField>