unpackaged/main/default/objects/Account/fields/Revenue__c.field-meta.xml
<CustomField>
    <fullName>Revenue__c</fullName>
    <label>Revenue</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>&lt;$1 million</fullName>
            </value>
            <value>
                <fullName>$1 m to &lt;$5m</fullName>
            </value>
            <value>
                <fullName>$5 m to &lt;$10m</fullName>
            </value>
            <value>
                <fullName>$10 m to &lt;$25m</fullName>
            </value>
            <value>
                <fullName>$25 m to &lt;$50m</fullName>
            </value>
            <value>
                <fullName>$50 m to &lt;$100m</fullName>
            </value>
            <value>
                <fullName>$100 m to &lt;$500m</fullName>
            </value>
            <value>
                <fullName>&lt;$500M</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>