unpackaged/main/default/objects/Account/fields/Seat_Admin_Email__c.field-meta.xml
<CustomField>
    <fullName>Seat_Admin_Email__c</fullName>
    <formula>SeatAdminFilter__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Seat Admin Email</label>
    <type>Text</type>
</CustomField>