unpackaged/main/default/objects/Account/fields/Solution_and_Support_Contact__c.field-meta.xml
<CustomField>
    <fullName>Solution_and_Support_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Solution and Support Contact</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.Division</field>
            <operation>equals</operation>
            <value>Solutions and Support</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>