unpackaged/main/default/objects/Account/fields/Sub_type__c.field-meta.xml
<CustomField>
    <fullName>Sub_type__c</fullName>
    <label>Sub-type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type</controllingField>
        <restricted>true</restricted>
        <valueSetName>Account_Sub_type</valueSetName>
    </valueSet>
</CustomField>