unpackaged/main/default/objects/Account/fields/Subsidiary__c.field-meta.xml
<CustomField>
    <fullName>Subsidiary__c</fullName>
    <description>Subsidiary used when syncing with NetSuite</description>
    <inlineHelpText>Subsidiary used when syncing with NetSuite</inlineHelpText>
    <label>Subsidiary</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Subsidiary</valueSetName>
    </valueSet>
</CustomField>