unpackaged/main/default/objects/Account/fields/Sum_of_Associated_Activities__c.field-meta.xml
<CustomField>
    <fullName>Sum_of_Associated_Activities__c</fullName>
    <description>Sum of contact, opportunity, account activities</description>
    <formula>( Count_of_Activities__c +  Sum_of_Contact_Activities__c +  Sum_of_Opportunity_Activities__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sum of Associated Activities</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>