unpackaged/main/default/objects/Account/fields/Sum_of_Contact_Activities__c.field-meta.xml
<CustomField>
    <fullName>Sum_of_Contact_Activities__c</fullName>
    <description>Sum of Tasks where Related To field is equal to Account Seat Admin.</description>
    <inlineHelpText>Sum of Tasks where Related To field is equal to Account Seat Admin.</inlineHelpText>
    <label>Sum of Contact Activities</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>