unpackaged/main/default/objects/Account/fields/Sum_of_Opportunity_Activities__c.field-meta.xml
<CustomField>
    <fullName>Sum_of_Opportunity_Activities__c</fullName>
    <description>Sum of Tasks where Related To field is equal to Account Opportunities.</description>
    <inlineHelpText>Sum of Tasks where Related To field is equal to Account Opportunities.</inlineHelpText>
    <label>Sum of Opportunity Activities</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>