unpackaged/main/default/objects/Account/fields/Sync_With_Netsuite__c.field-meta.xml
<CustomField>
    <fullName>Sync_With_Netsuite__c</fullName>
    <formula>If( Netsuite_Sync_Date__c &lt; LastModifiedDate, true ,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sync With Netsuite</label>
    <type>Checkbox</type>
</CustomField>