unpackaged/main/default/objects/Account/fields/Total_Contract_s_Value__c.field-meta.xml
<CustomField>
    <fullName>Total_Contract_s_Value__c</fullName>
    <description>Rollup of all Active Contracts&#39; Contract Value (created via Rollup Summary app)</description>
    <inlineHelpText>Rollup of all Active Contracts&#39; Contract Value</inlineHelpText>
    <label>Total Contract(s) Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>