unpackaged/main/default/objects/Account/fields/Total_Expected_Contract_s_Value__c.field-meta.xml
<CustomField>
    <fullName>Total_Expected_Contract_s_Value__c</fullName>
    <description>Annual contract value</description>
    <inlineHelpText>Annual contract value</inlineHelpText>
    <label>Annual Contract Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>