unpackaged/main/default/objects/Account/fields/Total_Number_of_Seats__c.field-meta.xml
<CustomField>
    <fullName>Total_Number_of_Seats__c</fullName>
    <description>Used by rollup helper to show total number of seats from active contracts.</description>
    <label>Total Number of Seats</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>