unpackaged/main/default/objects/Account/fields/UEI__c.field-meta.xml
<CustomField>
    <fullName>UEI__c</fullName>
    <label>UEI</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MM8KLGXQ3CC5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>