unpackaged/main/default/objects/Account/fields/Update_Shipping_Address__c.field-meta.xml
<CustomField>
    <fullName>Update_Shipping_Address__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Copy Billing Address to Shipping Address</label>
    <type>Checkbox</type>
</CustomField>